styles.css
/* Exo 2 font */
@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@400;600;700&display=swap');

:root {
    /* Colors */
    --white: #FFFFFF;
    --dark-blue-gray: #111827;
    --light-blue-gray: #1b253b;
    --yellow: #ffed4a;

    /* Typography: mobile */
    --text-sm: 1.4rem; 
    --text-base: 1.6rem; 
    --text-md: 1.8rem; 
    --text-lg: 2.4rem; 
    --text-xl: 3rem; 
    --text-2xl: 3.5rem; 
}

/* Typography: Utility Classes */
.text-sm { font-size: var(--text-sm); }
.text-base { font-size: var(--text-base); }
.text-md { font-size: var(--text-md); }
.text-lg { font-size: var(--text-lg); }
.text-xl { font-size: var(--text-xl); }
.text-2xl { font-size: var(--text-2xl); }

/* Color: Utility Classes */
.white { color: var(--white); }
.yellow { color: var(--yellow); }

/* Document Reset */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: "Exo 2", sans-serif;     
    transition: .2s linear;
}

html {
    scroll-behavior: smooth;
    font-size: 62.5%;
    overflow-x: hidden;
}

body {
    background: var(--dark-blue-gray);
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

/* Header */
header {
    display: flex;
    justify-content: center;
    padding: 1.6rem;
    width: 100%;
}

header #header-container {
    display: flex;
    align-items: center;
    gap: 2rem;
    width: 100%;
    max-width: 650px;
}

header #scoreboard {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    background: var(--light-blue-gray);
    width: 100%;
    height: 10vh;
    padding: 1.6rem;
    margin: 0 auto;
    border-radius: 1.2rem;
    box-shadow: 0 0 20px rgba(0,0,0,0.1),
    0 4px 6px rgba(0,0,0,0.1);
}

header #player-score,
header #round-indicator,
header #computer-score {
    display: block;
    text-align: center;
    font-size: 3.2rem;
}

/* Main */
main {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2rem;
}

main #game-content {
    display: flex; 
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 5rem;
    width: 100%;
}

main #result-message {
    display: block;
    margin: 0 auto;
    padding: 2rem;
    text-align: center;
    font-size: 3.2rem;
    font-weight: bold;
}

main #play-again-button {
    display: none;   
    color: var(--white);
    background: transparent;
    border: 2px solid var(--white);
    border-radius: 2rem;
    padding: 1rem 2.4rem;
    font-size: 2rem;
    cursor: pointer;
}

main #play-again-button:hover {
    background: var(--white);
    color: black;
}

main #choices {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 3rem;
    width: 90%;
    max-width: 650px;
    margin: 0 auto;
}

main .choice-button {
    border-radius: 1.2rem;
    background: var(--light-blue-gray);
    border: none;
    box-shadow: 0 0 20px rgba(0,0,0,0.1), 0 4px 6px rgba(0,0,0,0.1);
    cursor: pointer;
    aspect-ratio: 2 / 2;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    gap: 2rem;
}

main .choice-icon {
    font-size: 4.8rem;
}

main .choice-button:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 16px rgba(0,0,0,0.3);
}

main .choice-button:active {
    transform: translate(2px);
    box-shadow: 0 2px 4px (0,0,0,0.2);
}

main #quit-button {
    border-radius: 5rem;
    border: 2px solid #ff4444;
    font-size: 2rem;
    padding: 1rem 1.4rem;
    background: transparent;
    color: #ff4444;
    cursor: pointer;
    box-shadow: 0 4px 6px rgba(0,0,0,0.4),
    0 0 10px rgba(255,68,68,0.2);
}

main #quit-button:hover {
    background: #ff4444;
    color: var(--white);
}

main #quit-button:active,
main #play-again-button:active {
    transform: translate(2px);
}

footer {
    padding: 1.6rem;
    text-align: center;
}

main #hand-display {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 3rem;
    width: 90%;
    max-width: 650px;
    margin: 0 auto;
}

main #player-hand,
main #computer-hand {
    font-size: 8rem;
}

main #player-hand {
    display: inline-block;
    transform: scaleX(-1) rotate(-90deg);
}

main #computer-hand {
    display: inline-block;
    transform: rotate(-90deg);
}

main #player-hand.shake {
    animation: shake-player 0.8s ease-in-out 0.2s 1;
}

main #computer-hand.shake {
    animation: shake-computer 0.8s ease-in-out 0.2s 1;
}

main #versus {
    font-size: var(--text-md);
    color: var(--yellow);
    border: 2px solid var(--yellow);
    border-radius: 5rem;
    padding: 1rem;
    background: transparent;
}

/* Media queries (Tablet and above) */
@media (min-width: 768px ) {
    header #header-container {
        max-width: 900px;
    } 

} 

/* Keyframes */
@keyframes shake-computer {
    0% { transform: rotate(-90deg) translateY(0); }
    25% { transform: rotate(-90deg) rotate(10deg) translateY(-10px) translateX(20px); }
    50% { transform: rotate(-90deg) translateY(0); }
    75% { transform: rotate(-90deg) rotate(10deg) translateY(-10px) translateX(20px); }
    100% { transform: rotate(-90deg) translateY(0); }
}

@keyframes shake-player {
    0% { transform: scaleX(-1) rotate(-90deg) translateY(0); }
    25% { transform: scaleX(-1) rotate(-90deg) rotate(10deg) translateY(-10px) translateX(20px); }
    50% { transform: scaleX(-1) rotate(-90deg) translateY(0); }
    75% { transform: scaleX(-1) rotate(-90deg) rotate(10deg) translateY(-10px) translateX(20px); }
    100% { transform: scaleX(-1) rotate(-90deg) translateY(0); }
}

